<resources>
    <string name="app_name">CineFile</string>
    <string name="action_settings">Settings</string>

    <string name="refresh">Refresh</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Label for the sort by preference [CHAR LIMIT=30] -->
    <string name="pref_sort_label">Sort By</string>

    <!-- Label for most popular option in sort by preference [CHAR LIMIT=25] -->
    <string name="pref_sort_label_popular">Most Popular</string>

    <!-- Label for top rated option in sort by preference [CHAR LIMIT=25] -->
    <string name="pref_sort_label_rated">Top Rated</string>

    <!-- Key name for sort order preference in SharedPreferences [CHAR LIMIT=NONE] -->
    <string name="pref_sort_key" translatable="false">sort_by</string>

    <!-- Value in SharedPreferences for most popular option [CHAR LIMIT=NONE] -->
    <string name="pref_sort_default" translatable="false">popular</string>

    <!-- Value in SharedPreferences for most popular option [CHAR LIMIT=NONE] -->
    <string name="pref_sort_popular" translatable="false">popular</string>

    <!-- Value in SharedPreferences for top rated option [CHAR LIMIT=NONE] -->
    <string name="pref_sort_rated" translatable="false">top_rated</string>

    <string name="pref_sort_description">Sort by Most Popular or Top Rated movies</string>

    <string name="action_share">Share</string>
    <string name="json_results">results</string>
    <string name="json_title">title</string>
    <string name="json_release_date">release_date</string>
    <string name="json_poster_path">poster_path</string>
    <string name="json_vote_avg">vote_average</string>
    <string name="json_plot_synop">overview</string>
    <string name="json_backdrop_path">backdrop_path</string>

    <string name="_10">/10</string>
    <string name="poster_base_url">http://image.tmdb.org/t/p/w185/</string>
    <string name="backdrop_base_url">http://image.tmdb.org/t/p/w342/</string>
    <string name="poster_thumbnail_description">Poster Thumbnail</string>
    <string name="backdrop_image_description">BackDrop Image</string>
    <string name="out_of_ten_label">out_of_ten</string>
    <string name="trailers_title">Trailers:</string>
    <string name="trailer_1">Trailer 1</string>
    <string name="trailer_2">Trailer 2</string>
    <string name="place_holder_vote">10</string>
    <string name="summary_placeholder_text">A big screen remake of John Sturges\' classic western The Magnificent Seven, itself a remake of Akira Kurosawa\'s Seven Samurai. Seven gun men in the old west gradually come together to help a poor village against savage thieves.</string>
    <string name="reviews_btn_text">Reviews</string>
    <string name="reviews_title">Reviews:</string>
    <string name="no_reviews_message">No reviews yet.</string>
    <string name="api_movie_id">id</string>
    <string name="trailer_path">/videos?</string>
    <string name="no_browser_msg">Please install a web browser or the Youtube app and retry.</string>
    <string name="no_trailers_yet">No trailers yet!</string>
    <string name="trailer_key">key</string>
    <string name="trailer_name">name</string>
    <string name="most_popular">Most Popular</string>
    <string name="top_rated">Top Rated</string>
    <string name="favorites">Favorites</string>
    <string name="sort_order">Sort Order</string>
    <string name="offline_message">"Oops! You have no internet connection :("</string>
    <string name="nothing_here_yet">Nothing Here yet.</string>
    <string name="share">Share</string>
    <string name="trailer_video_thumbnail">Trailer video thumbnail</string>
    <string name="trailer_play_button_description">Trailer play button</string>
    <string name="movie_poster_description">Movie Poster</string>

</resources>
