<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    tools:context=".DetailActivity"
    android:fillViewport="true">
    tools:showIn="@layout/activity_detail">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <ImageView
            android:id="@+id/backdrop_image_view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/details_backdrop_height"
            android:contentDescription="@string/backdrop_image_description"
            android:src="@color/colorAccent"/>

        <ImageView
            android:id="@+id/detail_poster_image_view"
            style="@style/detail_thumb_image"
            android:layout_width="@dimen/details_thumb_width"
            android:layout_height="@dimen/details_thumb_height"
            android:contentDescription="@string/poster_thumbnail_description" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/backdrop_image_view"
            android:layout_toEndOf="@+id/detail_poster_image_view"
            android:layout_toRightOf="@+id/detail_poster_image_view"
            android:orientation="vertical">

            <TextView
                android:id="@+id/movie_title_text"
                style="@style/detail_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/movie_release_date_text"
                style="@style/detail_release"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <LinearLayout
                android:id="@+id/rating_container"
                style="@style/detail_release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/movie_vote_avg_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/place_holder_vote"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                    android:textColor="?android:attr/textColorPrimary" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_default"
                    android:contentDescription="@string/out_of_ten_label"
                    android:text="@string/_10"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="?android:attr/textColorSecondary" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_below="@+id/detail_poster_image_view">

            <TextView
                android:id="@+id/movie_overview_text"
                style="@style/detail_plot_summary"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/black"
                android:layout_margin="8dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trailers_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:layout_margin="@dimen/activity_vertical_margin"/>

            <LinearLayout
                android:id="@+id/trailer_1_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/activity_vertical_margin">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@android:drawable/ic_media_play"
                    android:background="@android:color/black"
                    android:layout_marginLeft="@dimen/margin_large"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/detail_title"
                    android:text="@string/trailer_1"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/black"
                android:layout_margin="8dp"/>

            <LinearLayout
                android:id="@+id/trailer_2_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/activity_vertical_margin">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@android:drawable/ic_media_play"
                    android:background="@android:color/black"
                    android:layout_marginLeft="@dimen/margin_large"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/detail_title"
                    android:text="@string/trailer_2"/>

            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>
</ScrollView>
